--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "element-plus": "^2.5.5",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
