--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "codemirror": "^5.65.16",
+    "codemirror-editor-vue3": "^2.4.1",
     "element-plus": "^2.5.5",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
