--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "codemirror": "^5.65.16",
     "codemirror-editor-vue3": "^2.4.1",
     "element-plus": "^2.5.5",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
